--- a/Resources/Public/Scss/Theme/_footer.scss
+++ b/Resources/Public/Scss/Theme/_footer.scss
@@ -96,7 +96,7 @@
 //
 .footer-sociallinks {
     .sociallinks {
-        display: flex;
+        display: inline-flex;
         justify-content: center;
     }
     .sociallinks-list {
