--- a/Resources/Public/Scss/Theme/_socialmedia.scss
+++ b/Resources/Public/Scss/Theme/_socialmedia.scss
@@ -13,7 +13,6 @@
     position: relative;
     display: inline-flex;
     align-items: center;
-    overflow: hidden;
     text-decoration: none !important;
     gap: .5rem;
 }
